// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AdHocToolsPanelTest adhoc panel matches snapshot 1`] = `
<DocumentFragment>
  <div>
    <main
      class="adHocToolsGrid"
    >
      <div>
        first
      </div>
      <span
        class="divider"
      />
      <div>
        second
      </div>
      <span
        class="divider"
      />
      <div>
        third
      </div>
      <span
        class="divider"
      />
      <div>
        fourth
      </div>
      <div>
        fifth
      </div>
    </main>
    <div
      class="adHocToolsPanelFooter"
      role="navigation"
    >
      <mock-styledlinkbase
        classname="link"
        id="back-to-launchpad-link"
      >
        Back to launch pad
      </mock-styledlinkbase>
    </div>
  </div>
</DocumentFragment>
`;

exports[`AdHocToolsPanelTest adhoc panel with needs review sixth toggle matches snapshot 1`] = `
<DocumentFragment>
  <div>
    <main
      class="adHocToolsGrid"
    >
      <div>
        first
      </div>
      <span
        class="divider"
      />
      <div>
        second
      </div>
      <span
        class="divider"
      />
      <div>
        third
      </div>
      <span
        class="divider"
      />
      <div>
        fourth
      </div>
      <div>
        fifth
      </div>
      <span
        class="divider"
      />
      <div>
        sixth
      </div>
    </main>
    <div
      class="adHocToolsPanelFooter"
      role="navigation"
    >
      <mock-styledlinkbase
        classname="link"
        id="back-to-launchpad-link"
      >
        Back to launch pad
      </mock-styledlinkbase>
    </div>
  </div>
</DocumentFragment>
`;

exports[`AdHocToolsPanelTest adhoc tools panel with accessible names feature 1`] = `
<DocumentFragment>
  <div>
    <main
      class="adHocToolsGrid"
    >
      <div>
        first
      </div>
      <span
        class="divider"
      />
      <div>
        second
      </div>
      <span
        class="divider"
      />
      <div>
        third
      </div>
      <span
        class="divider"
      />
      <div>
        fourth
      </div>
      <div>
        fifth
      </div>
      <span
        class="divider"
      />
      <div>
        sixth
      </div>
      <span
        class="divider"
      />
      <div>
        seventh
      </div>
    </main>
    <div
      class="adHocToolsPanelFooter"
      role="navigation"
    >
      <mock-styledlinkbase
        classname="link"
        id="back-to-launchpad-link"
      >
        Back to launch pad
      </mock-styledlinkbase>
    </div>
  </div>
</DocumentFragment>
`;
